# rocks_pyo3

./: Cargo.toml  README.md  go.py  pyproject.toml
.github/scripts/: before-script-linux-almalinux-8.10.sh  before-script-linux-centos-7.sh  before-script-linux-debian-9.sh  before-script-linux-ubuntu-22.04.sh
.github/workflows/: CI.yml  before-script-linux.sh  install-clang.sh  linux-x86-zig.yml  linux-x86.yml
python/rocks_pyo3/: __init__.py  rlimit.py  rocks_pyo3.pyi
src/: lib.rs
tests/: test_basic.py  test_errors.py  test_iterators.py  test_rlimit.py  test_write_batch.py
