[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rocks_pyo3"
requires-python = ">=3.8"
description = "Python bindings for RocksDB using PyO3"
authors = [
    {name = "Richard Kiss", email = "him@richardkiss.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: Apache Software License",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "rocks_pyo3"
bindings = "pyo3"
strip = true

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "ruff>=0.12.7",
]
